tests/snapshots/run_wpt_conformance__litert_mul_uint32_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "mul.https.any.js",
    "mul uint32 4D tensors",
    "litert",
    "PASS",
)
